# test-russian-news-parser

./: .env.sample  LICENSE  README.md  docker-compose.yml
.github/workflows/: black-linting.yml
admin/: Dockerfile  entrypoint.sh  pyproject.toml  uwsgi.ini
admin/config/: settings.py  urls.py
admin/config/components/: apps.py  database.py  localization.py  logging.py  main_settings.py  validation.py
admin/parsing/: admin.py  apps.py  models.py
admin/parsing/locale/en/LC_MESSAGES/: django.mo  django.po
admin/parsing/locale/ru/LC_MESSAGES/: django.mo  django.po
admin/parsing/migrations/: 0001_initial.py
nginx/: nginx.conf
nginx/configs/: site.conf
parsers/: Dockerfile  main.py  pyproject.toml  scrapy.cfg
parsers/seventy_eight_ru/: database.py  middlewares.py  models.py  pipelines.py  settings.py  utils.py
parsers/seventy_eight_ru/spiders/: spider.py
